# my_weekly_schedule

./: README.md  example.txt  pyproject.toml
my_weekly_schedule/: main.py  models.py  parse_txt.py  plot_schedule.py
