[tool.poetry]
name = "my_weekly_schedule"
version = "0.1.0"
description = ""
authors = ["Fabian Torres"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.1"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
ipdb = "^0.13.9"
ipython = "^8.0.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
