[tool.poetry]
name = "my_weekly_schedule"
version = "0.1.2"
description = "A tool for plotting your weekly schedule."
authors = ["Fabian Torres"]
license = "GPLv3"
readme = "README.md"
repository = "https://github.com/ftorres16/my_weekly_schedule"

[tool.poetry.scripts]
my_weekly_schedule = 'my_weekly_schedule.main:app'

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.1"
typer = "^0.4.0"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
ipdb = "^0.13.9"
ipython = "^8.0.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
